--- a/server.cfg
+++ b/server.cfg
@@ -1,4 +1,4 @@
-hostname "GhostTerror"
+hostname "GhostTerror TTT2"
 sv_password "Link Start"
 sv_timeout 60
 rcon_password "WhatIsThisUsedFor"
@@ -32,10 +32,81 @@ ttt_demonic_power_max 900
 ttt_demonic_power_regen 20
 ttt_demonic_power_req_attack 60
 ttt_demonic_power_req_move 10
-ttt_demonic_power_req_wepswitch 60
+ttt_demonic_power_req_wepswitch 100
 ttt_bluebull_det 1
 ttt_bluebull_tr 1
 ttt_satm_traitor 0 
 ttt_satm_detective  1
 ttt_satm_duration  10
 ttt_buy_notification 1
+# A2S Missile
+ttt_asm_missile_blast_radius 20
+ttt_asm_damage_owner 0
+ttt_asm_allow_abort 0
+ttt_asm_friendlyfire 0
+#
+#   Shinigami [ROLE]
+#
+# enable or disable this role
+  ttt_shinigami_enabled [0/1] (default: 1) 
+# the percentage of players that are spawned as this role
+  ttt_shinigami_pct [0.0..1.0] (default: 1.0)
+# the limit of players that spawn as this role each round, this overwrites the percentage
+  ttt_shinigami_max [0..n] (default: 1) 
+# the probability each round of this role being spawned at all
+  ttt_shinigami_random [0..100] (default: 50) 
+# the amount of players needed for this role to spawn
+  ttt_shinigami_min_players: [0..n] (default: 8)
+  # the speed modifier the shinigami receives when respawned
+  ttt2_shinigami_speed (default: 2)
+# the amount of damage the shinigami takes each second after he respawned
+  ttt2_shinigami_health_loss (default: 5)
+#
+#     Jester [ROLE]
+#
+# enable or disable this role
+  ttt_jester_enabled [0/1] (default: 1) 
+# the percentage of players that are spawned as this role
+  ttt_jester_pct [0.0..1.0] (default: 1.0)
+# the limit of players that spawn as this role each round, this overwrites the percentage
+  ttt_jester_max [0..n] (default: 1) 
+# the probability each round of this role being spawned at all
+  ttt_jester_random [0..100] (default: 50) 
+# the amount of players needed for this role to spawn
+  ttt_jester_min_players: [0..n] (default: 8)
+  # set the winstate of this role
+  ttt2_jes_winstate [0..7] (default: 1)
+  # 0: select a random winstate
+  # 1: the jester wins when he is killed
+  # 2: the jester respawns within three seconds with a random opposite role of his killer
+  # 3: the jester respawns after his killer died with a random opposite role of his killer
+  # 4: the jester respawns after his killed died with the same role as his killer
+  # 5: the jester respawns within three seconds with the same role as his killer and his killer
+       dies
+  # 6: the jester respawns within three seconds with a random opposite role of his killer and his
+       killer dies
+  # 7: like 5, unless the killer is a traitor or serialkiller, then jester is killed normally
+# should it be publicily anounced if there is a jester in a round
+  ttt2_jes_announce [0/1] (default: 1)
+# should the jester be able to push other players with his convar
+  ttt2_jes_improvised [0/1] (default: 1)
+# should the jester be able to carry entities with his magneto stick
+  ttt2_jes_carry [0/1] (default: 1)
+ttt_asm_show_colleagues1
+#
+#   [TTT2] Wrath [ROLE]
+#
+# enable or disable this role
+  ttt_wra_enabled [0/1] (default: 1)
+# the percentage of players that are spawned as this role
+  ttt_wra_pct [0.0..1.0] (default: 0.17)
+# the limit of players that spawn as this role each round, this overwrites the percentage
+  ttt_wra_max [0..n] (default: 1)
+# the probability each round of this role being spawned at all
+  ttt_wra_random [0..100] (default: 33)
+# the amount of players needed for this role to spawn
+  ttt_wra_min_players: [0..n] (default: 8)
+  # Changes the time before a wrath will be revived as a traitor in seconds.
+ttt_wrath_revival_time[0/100] (default 15)
+# Makes the Wrath know that he is Wrath, or think he is just another innocent
+ttt_wrath_can_see_own_role (default 0)
