--- a/server.cfg
+++ b/server.cfg
@@ -48,34 +48,47 @@ ttt_asm_friendlyfire 0
 #   Shinigami [ROLE]
 #
 # enable or disable this role
-  ttt_shinigami_enabled [0/1] (default: 1) 
+  ttt_shinigami_enabled 1
+ #[0/1] (default: 1) 
 # the percentage of players that are spawned as this role
-  ttt_shinigami_pct [0.0..1.0] (default: 1.0)
+  ttt_shinigami_pct 1 
+#  [0.0..1.0] (default: 1.0)
 # the limit of players that spawn as this role each round, this overwrites the percentage
-  ttt_shinigami_max [0..n] (default: 1) 
+  ttt_shinigami_max 1
+#  [0..n] (default: 1) 
 # the probability each round of this role being spawned at all
-  ttt_shinigami_random [0..100] (default: 50) 
+ttt_shinigami_random 80
+#[0..100] (default: 50) 
 # the amount of players needed for this role to spawn
-  ttt_shinigami_min_players: [0..n] (default: 8)
+ttt_shinigami_min_players 4
+#: [0..n] (default: 8)
   # the speed modifier the shinigami receives when respawned
-  ttt2_shinigami_speed (default: 2)
+ttt2_shinigami_speed 2
+#(default: 2)
 # the amount of damage the shinigami takes each second after he respawned
-  ttt2_shinigami_health_loss (default: 5)
+ttt2_shinigami_health_loss 2
+#  (default: 5)
 #
 #     Jester [ROLE]
 #
 # enable or disable this role
-  ttt_jester_enabled [0/1] (default: 1) 
+ttt_jester_enabled 0
+#[0/1] (default: 0) 
 # the percentage of players that are spawned as this role
-  ttt_jester_pct [0.0..1.0] (default: 1.0)
+  ttt_jester_pct 1
+#  [0.0..1.0] (default: 1.0)
 # the limit of players that spawn as this role each round, this overwrites the percentage
-  ttt_jester_max [0..n] (default: 1) 
+  ttt_jester_max 1
+#  [0..n] (default: 1) 
 # the probability each round of this role being spawned at all
-  ttt_jester_random [0..100] (default: 50) 
+  ttt_jester_random 60
+  #[0..100] (default: 50) 
 # the amount of players needed for this role to spawn
-  ttt_jester_min_players: [0..n] (default: 8)
+  ttt_jester_min_players 5
+#[0..n] (default: 8)
   # set the winstate of this role
-  ttt2_jes_winstate [0..7] (default: 1)
+  ttt2_jes_winstate 5
+#  [0..7] (default: 1)
   # 0: select a random winstate
   # 1: the jester wins when he is killed
   # 2: the jester respawns within three seconds with a random opposite role of his killer
@@ -87,26 +100,36 @@ ttt_asm_friendlyfire 0
        killer dies
   # 7: like 5, unless the killer is a traitor or serialkiller, then jester is killed normally
 # should it be publicily anounced if there is a jester in a round
-  ttt2_jes_announce [0/1] (default: 1)
+  ttt2_jes_announce 1
+  #[0/1] (default: 1)
 # should the jester be able to push other players with his convar
-  ttt2_jes_improvised [0/1] (default: 1)
+  ttt2_jes_improvised 1
+#  [0/1] (default: 1)
 # should the jester be able to carry entities with his magneto stick
-  ttt2_jes_carry [0/1] (default: 1)
-ttt_asm_show_colleagues1
+  ttt2_jes_carry 1
+  #[0/1] (default: 1)
+ttt_asm_show_colleagues 1
 #
 #   [TTT2] Wrath [ROLE]
 #
 # enable or disable this role
-  ttt_wra_enabled [0/1] (default: 1)
+  ttt_wra_enabled 1
+#  [0/1] (default: 1)
 # the percentage of players that are spawned as this role
-  ttt_wra_pct [0.0..1.0] (default: 0.17)
+  ttt_wra_pct 1
+#  [0.0..1.0] (default: 0.17)
 # the limit of players that spawn as this role each round, this overwrites the percentage
-  ttt_wra_max [0..n] (default: 1)
+  ttt_wra_max 1
+#[0..n] (default: 1)
 # the probability each round of this role being spawned at all
-  ttt_wra_random [0..100] (default: 33)
+  ttt_wra_random 65
+  #[0..100] (default: 33)
 # the amount of players needed for this role to spawn
-  ttt_wra_min_players: [0..n] (default: 8)
+  ttt_wra_min_players 4
+  #: [0..n] (default: 8)
   # Changes the time before a wrath will be revived as a traitor in seconds.
-ttt_wrath_revival_time[0/100] (default 15)
+ttt_wrath_revival_time 20
+#[0/100] (default 15)
 # Makes the Wrath know that he is Wrath, or think he is just another innocent
-ttt_wrath_can_see_own_role (default 0)
+ttt_wrath_can_see_own_role 0
+#(default 0)
