--- a/server.cfg
+++ b/server.cfg
@@ -6,6 +6,7 @@ mp_autoteambalance 1
 mp_limitteams 1
 writeid
 writeip
+pam_max_maps 0
 ttt_detective_min_players 6
 ttt_detective_max 3
 ttt_traitor_pct 0.3
@@ -18,21 +19,21 @@ ttt_det_credits_starting 4
 ttt_det_credits_traitorkill 2
 ttt_allow_discomb_jump 1
 ttt_jetpack_force 15
-ttt_secondchance_tr 0
+ttt_secondchance_tr= 0
 ttt_secondchance_det 1
 ttt_lightsaber_t_buy 1
 ttt_lightsaber_d_buy 1
 ttt_lightsaber_primary_damage 80
 ttt_lightsaber_lightning_damage 30
-ttt_lightsaber_force_regen 15
-ttt_lightsaber_block_cost 5
+ttt_lightsaber_force_regen 10
+ttt_lightsaber_block_cost 20
 ttt_demonic_possession_detective 1
 ttt_demonic_possession_traitor 1
 ttt_demonic_power_max 900
 ttt_demonic_power_regen 20
 ttt_demonic_power_req_attack 60
-ttt_demonic_power_req_move 10
-ttt_demonic_power_req_wepswitch 100
+ttt_demonic_power_req_move 35
+ttt_demonic_power_req_wepswitch 150
 ttt_bluebull_det 1
 ttt_bluebull_tr 1
 ttt_satm_traitor 0 
@@ -72,32 +73,30 @@ ttt2_shinigami_health_loss 2
 #     Jester [ROLE]
 #
 # enable or disable this role
-ttt_jester_enabled 0
+ttt_jester_enabled 1
 #[0/1] (default: 0) 
 # the percentage of players that are spawned as this role
-  ttt_jester_pct 1
+ttt_jester_pct 0.2
 #  [0.0..1.0] (default: 1.0)
 # the limit of players that spawn as this role each round, this overwrites the percentage
-  ttt_jester_max 1
+ttt_jester_max 1
 #  [0..n] (default: 1) 
 # the probability each round of this role being spawned at all
-  ttt_jester_random 60
+ttt_jester_random 60
   #[0..100] (default: 50) 
 # the amount of players needed for this role to spawn
-  ttt_jester_min_players 5
+ttt_jester_min_players 5
 #[0..n] (default: 8)
   # set the winstate of this role
-  ttt2_jes_winstate 5
+ttt2_jes_winstate 5
 #  [0..7] (default: 1)
   # 0: select a random winstate
   # 1: the jester wins when he is killed
   # 2: the jester respawns within three seconds with a random opposite role of his killer
   # 3: the jester respawns after his killer died with a random opposite role of his killer
   # 4: the jester respawns after his killed died with the same role as his killer
-  # 5: the jester respawns within three seconds with the same role as his killer and his killer
-       dies
-  # 6: the jester respawns within three seconds with a random opposite role of his killer and his
-       killer dies
+  # 5: the jester respawns within three seconds with the same role as his killer and his killer dies
+  # 6: the jester respawns within three seconds with a random opposite role of his killer and his killer dies
   # 7: like 5, unless the killer is a traitor or serialkiller, then jester is killed normally
 # should it be publicily anounced if there is a jester in a round
   ttt2_jes_announce 1
@@ -113,19 +112,19 @@ ttt_asm_show_colleagues 1
 #   [TTT2] Wrath [ROLE]
 #
 # enable or disable this role
-  ttt_wra_enabled 1
+ttt_wrath_enabled 1
 #  [0/1] (default: 1)
 # the percentage of players that are spawned as this role
-  ttt_wra_pct 1
+ttt_wrath_pct 1
 #  [0.0..1.0] (default: 0.17)
 # the limit of players that spawn as this role each round, this overwrites the percentage
-  ttt_wra_max 1
+ttt_wrath_max 1
 #[0..n] (default: 1)
 # the probability each round of this role being spawned at all
-  ttt_wra_random 65
+ttt_wrath_random 65
   #[0..100] (default: 33)
 # the amount of players needed for this role to spawn
-  ttt_wra_min_players 4
+ttt_wrath_min_players 4
   #: [0..n] (default: 8)
   # Changes the time before a wrath will be revived as a traitor in seconds.
 ttt_wrath_revival_time 20
@@ -133,3 +132,38 @@ ttt_wrath_revival_time 20
 # Makes the Wrath know that he is Wrath, or think he is just another innocent
 ttt_wrath_can_see_own_role 0
 #(default 0)
+# enable or disable this role
+  ttt_necro_enabled1
+  #(default: 1) 
+# the percentage of players that are spawned as this role
+  ttt_necro_pct 0.2 (default: 0.15)
+# the limit of players that spawn as this role each round, this overwrites the percentage
+  ttt_necro_max 1
+# the probability each round of this role being spawned at all
+  ttt_necro_random 75
+  #(default: 40) 
+# the amount of players needed for this role to spawn
+  ttt_necro_min_players:7 
+  #[0..n] (default: 7)
+
+
+# defines if the role of the spectated player should be visible in the HUD
+ttt_aspectator_display_role 0 
+# defines if only admin players are able to see this element
+# defines if wallhack should include role colors
+ttt_aspectator_display_wallhack_role 1 
+# enable or disable tttc
+ttt2_classes 1
+#(default: 1)
+# grant each class only once if possible
+ttt_classes_limited 0
+#[0/1] (default: 1)
+# limits the maximum amount of different classes
+ttt_classes_different 0
+#[0/m] (default: 0, 0 disables the limitation)
+# option to choose between two classes
+ttt_classes_option 0
+# place passive class items on extra class slot
+ttt_classes_extraslot 1
+# off for now Stopes cristal drops
+ttt2_heroes 0
