--- a/server.cfg
+++ b/server.cfg
@@ -18,7 +18,7 @@ ttt_credits_detectivekill 3
 ttt_det_credits_starting 4
 ttt_det_credits_traitorkill 2
 ttt_allow_discomb_jump 1
-ttt_jetpack_force 15
+ttt_jetpack_force 20
 ttt_secondchance_tr= 0
 ttt_secondchance_det 1
 ttt_lightsaber_t_buy 1
@@ -41,7 +41,7 @@ ttt_satm_detective  1
 ttt_satm_duration  10
 ttt_buy_notification 1
 # A2S Missile
-ttt_asm_missile_blast_radius 20
+ttt_asm_missile_blast_radius 40
 ttt_asm_damage_owner 0
 ttt_asm_allow_abort 0
 ttt_asm_friendlyfire 0
@@ -64,10 +64,10 @@ ttt_shinigami_random 80
 ttt_shinigami_min_players 4
 #: [0..n] (default: 8)
   # the speed modifier the shinigami receives when respawned
-ttt2_shinigami_speed 2
+ttt2_shinigami_speed 3
 #(default: 2)
 # the amount of damage the shinigami takes each second after he respawned
-ttt2_shinigami_health_loss 2
+ttt2_shinigami_health_loss 1
 #  (default: 5)
 #
 #     Jester [ROLE]
@@ -88,7 +88,7 @@ ttt_jester_random 60
 ttt_jester_min_players 5
 #[0..n] (default: 8)
   # set the winstate of this role
-ttt2_jes_winstate 5
+ttt2_jes_winstate 4
 #  [0..7] (default: 1)
   # 0: select a random winstate
   # 1: the jester wins when he is killed
@@ -121,29 +121,30 @@ ttt_wrath_pct 1
 ttt_wrath_max 1
 #[0..n] (default: 1)
 # the probability each round of this role being spawned at all
-ttt_wrath_random 65
+ttt_wrath_random 75
   #[0..100] (default: 33)
 # the amount of players needed for this role to spawn
 ttt_wrath_min_players 4
   #: [0..n] (default: 8)
   # Changes the time before a wrath will be revived as a traitor in seconds.
-ttt_wrath_revival_time 20
+ttt_wrath_revival_time 30
 #[0/100] (default 15)
 # Makes the Wrath know that he is Wrath, or think he is just another innocent
 ttt_wrath_can_see_own_role 0
 #(default 0)
 # enable or disable this role
-  ttt_necro_enabled1
+  ttt_necro_enabled 1
   #(default: 1) 
 # the percentage of players that are spawned as this role
-  ttt_necro_pct 0.2 (default: 0.15)
+  ttt_necro_pct 0.2 
+  #(default: 0.15)
 # the limit of players that spawn as this role each round, this overwrites the percentage
   ttt_necro_max 1
 # the probability each round of this role being spawned at all
-  ttt_necro_random 75
+  ttt_necro_random 55
   #(default: 40) 
 # the amount of players needed for this role to spawn
-  ttt_necro_min_players:7 
+  ttt_necro_min_players 5 
   #[0..n] (default: 7)
 
 
@@ -153,7 +154,7 @@ ttt_aspectator_display_role 0
 # defines if wallhack should include role colors
 ttt_aspectator_display_wallhack_role 1 
 # enable or disable tttc
-ttt2_classes 1
+ttt2_classes 0
 #(default: 1)
 # grant each class only once if possible
 ttt_classes_limited 0
@@ -167,3 +168,131 @@ ttt_classes_option 0
 ttt_classes_extraslot 1
 # off for now Stopes cristal drops
 ttt2_heroes 0
+
+climbswep2_windsound = 1 
+#(CLIENT) (wind sound)
+climbswep2_wallrun_minheight = 250
+#(SHARED)
+climbswep2_maxjumps = 3 
+#(SHARED) (maximum amount of multi jumps faced to walls)
+climbswep2_showhud = 1 
+#(CLIENT) (Show the climb HUD?)
+# enable or disable this role
+  ttt_unk_enabled 1
+  #[0/1] (default: 1) 
+# the percentage of players that are spawned as this role
+  ttt_unk_pct 0.2
+  #[0.0..1.0] (default: 0.17)
+# the limit of players that spawn as this role each round, this overwrites the percentage
+  ttt_unk_max 1 
+  #[0..n] (default: 1) 
+# the probability each round of this role being spawned at all
+  ttt_unk_random 5
+  #[0..100] (default: 10) 
+# the amount of players needed for this role to spawn
+  ttt_unk_min_players: 3
+  #[0..n] (default: 6)a
+# enable or disable this role
+  ttt_tra_enabled 1
+  #[0/1] (default: 1) 
+# the percentage of players that are spawned as this role
+  ttt_tra_pct 0.2
+  #[0.0..1.0] (default: 0.17)
+# the limit of players that spawn as this role each round, this overwrites the percentage
+  ttt_tra_max 2
+  #[0..n] (default: 1) 
+# the probability each round of this role being spawned at all
+  ttt_tra_random 45
+  #[0..100] (default: 50) 
+# the amount of players needed for this role to spawn
+  ttt_tra_min_players 4
+  #[0..n] (default: 6)
+# allow the trapper to use traitor buttons
+  ttt_trapper_traitor_button 1
+  #[0/1] (default: 1)
+# shows ripple effect to trappers
+  ttt_trapper_tbutton_show_to_trapper 1
+# shows ripple effect to others
+  ttt_trapper_tbutton_show_to_others 1
+# enable or disable this role
+  ttt_inf_enabled 1
+  #[0/1] (default: 1) 
+# the percentage of players that are spawned as this role
+  ttt_inf_pct 0.8 
+  #[0.0..1.0] (default: 0.17)
+# the limit of players that spawn as this role each round, this overwrites the percentage
+  ttt_inf_max 1
+  #[0..n] (default: 1) 
+# the probability each round of this role being spawned at all
+  ttt_inf_random 10
+  #[0..100] (default: 10) 
+# the amount of players needed for this role to spawn
+  ttt_inf_min_players 5
+  #[0..n] (default: 6)
+ ttt2_inf_maxhealth_new_inf 45
+ #[0..2] (default: 30)
+ 
+ttt_nokia_durability 150
+ttt_nokia_overflowblock 1
+ttt_nokia_chestonly 0
+ttt_nokia_bulletonly 0
+# enable or disable this role
+  ttt_pri_enabled 1
+  #[0/1] (default: 1) 
+# the percentage of players that are spawned as this role
+  ttt_pri_pct 0.4 
+  #[0.0..1.0] (default: 0.15)
+# the limit of players that spawn as this role each round, this overwrites the percentage
+  ttt_pri_max 1
+  # [0..n] (default: 1) 
+# the probability each round of this role being spawned at all
+  ttt_pri_random 25
+  #[0..100] (default: 33) 
+# the amount of players needed for this role to spawn
+  ttt_pri_min_players 5
+  #[0..n] (default: 7)
+# the time in seconds for the holy deagle to recharge after a player was hit
+  ttt_pri_refill_time 30
+  #[0..n] (def: 45)
+# the time in seconds for the holy deagle to recharge after a player missed a shot
+  ttt_pri_refill_time_missed 6
+  #[0..n] (def: 5)
+# the amount of damage delt to detectives
+  ttt_pri_damage_dete 60
+  #[0..n] (def: 30)
+# the amount of damage delt to marers
+  ttt_pri_damage_marker 20 
+  #[0..n] (def: 30)
+# defines if players in the brotherhood should be notified with messages about players in their team
+  ttt_pri_show_messages 1 
+  #[0/1] (def: 1)
+# enable or disable this role
+  ttt_cup_enabled 1 
+  #[0/1] (default: 1) 
+# the percentage of players that are spawned as this role
+  ttt_cup_pct 0.2
+  #[0.0..1.0] (default: 0.15)
+# the limit of players that spawn as this role each round, this overwrites the percentage
+  ttt_cup_max 1
+  #[0..n] (default: 1) 
+# the probability each round of this role being spawned at all
+  ttt_cup_random 7
+  #[0..100] (default: 15) 
+# the amount of players needed for this role to spawn
+  ttt_cup_min_players 6
+  #[0..n] (default: 6)
+# whether or not the lovers split their damage
+  ttt_cupid_damage_split_enabled 1
+  #[0/1] (default: 1) 
+# whether or not the old weapon is used
+  ttt_cupid_old_weapon  1
+  #[0/1] (default: 0) 
+# whether or not the cupid has to be one of the Lovers
+ ttt_cupid_forced_selflove 1
+ #[0/1] (default: 0) 
+# whether or not lovers will always be in their own team
+ttt_cupid_lovers_force_own_team 1
+#[0/1] (default: 0) 
+# whether or not cupid will join the loved ones
+ttt_cupid_joins_team_lovers 1
+#[0/1] (default: 0) 
