--- a/server.cfg
+++ b/server.cfg
@@ -39,7 +39,9 @@ ttt_bluebull_tr 1
 ttt_satm_traitor 0 
 ttt_satm_detective  1
 ttt_satm_duration  10
-ttt_buy_notification 1
+ttt_buy_notification 1GB
+9+
+
 # A2S Missile
 ttt_asm_missile_blast_radius 40
 ttt_asm_damage_owner 0
@@ -52,13 +54,13 @@ ttt_asm_friendlyfire 0
 ttt_shinigami_enabled 1
  #[0/1] (default: 1) 
 # the percentage of players that are spawned as this role
-  ttt_shinigami_pct 1 
+  ttt_shinigami_pct 0.6 
 #  [0.0..1.0] (default: 1.0)
 # the limit of players that spawn as this role each round, this overwrites the percentage
-ttt_shinigami_max 1
+ttt_shinigami_max 2
 #  [0..n] (default: 1) 
 # the probability each round of this role being spawned at all
-ttt_shinigami_random 80
+ttt_shinigami_random 70
 #[0..100] (default: 50) 
 # the amount of players needed for this role to spawn
 ttt_shinigami_min_players 4
@@ -88,7 +90,7 @@ ttt_jester_random 60
 ttt_jester_min_players 5
 #[0..n] (default: 8)
   # set the winstate of this role
-ttt2_jes_winstate 4
+ttt2_jes_winstate 3
 #  [0..7] (default: 1)
   # 0: select a random winstate
   # 1: the jester wins when he is killed
@@ -127,7 +129,7 @@ ttt_wrath_random 75
 ttt_wrath_min_players 4
   #: [0..n] (default: 8)
   # Changes the time before a wrath will be revived as a traitor in seconds.
-ttt_wrath_revival_time 30
+ttt_wrath_revival_time 25
 #[0/100] (default 15)
 # Makes the Wrath know that he is Wrath, or think he is just another innocent
 ttt_wrath_can_see_own_role 0
@@ -136,7 +138,7 @@ ttt_wrath_can_see_own_role 0
 ttt_necro_enabled 1
   #(default: 1) 
 # the percentage of players that are spawned as this role
-ttt_necro_pct 0.2 
+ttt_necro_pct 0.3 
   #(default: 0.15)
 # the limit of players that spawn as this role each round, this overwrites the percentage
 ttt_necro_max 1
@@ -196,13 +198,13 @@ ttt_unk_min_players: 3
 ttt_tra_enabled 1
   #[0/1] (default: 1) 
 # the percentage of players that are spawned as this role
-ttt_tra_pct 0.2
+ttt_tra_pct 0.4
   #[0.0..1.0] (default: 0.17)
 # the limit of players that spawn as this role each round, this overwrites the percentage
 ttt_tra_max 2
   #[0..n] (default: 1) 
 # the probability each round of this role being spawned at all
-ttt_tra_random 45
+ttt_tra_random 65
   #[0..100] (default: 50) 
 # the amount of players needed for this role to spawn
 ttt_tra_min_players 4
@@ -224,7 +226,7 @@ ttt_inf_pct 0.8
 ttt_inf_max 1
   #[0..n] (default: 1) 
 # the probability each round of this role being spawned at all
-ttt_inf_random 10
+ttt_inf_random 35
   #[0..100] (default: 10) 
 # the amount of players needed for this role to spawn
 ttt_inf_min_players 5
@@ -246,13 +248,13 @@ ttt_pri_pct 0.4
 ttt_pri_max 1
   # [0..n] (default: 1) 
 # the probability each round of this role being spawned at all
-ttt_pri_random 25
+ttt_pri_random 40
   #[0..100] (default: 33) 
 # the amount of players needed for this role to spawn
 ttt_pri_min_players 5
   #[0..n] (default: 7)
 # the time in seconds for the holy deagle to recharge after a player was hit
-ttt_pri_refill_time 30
+ttt_pri_refill_time 20
   #[0..n] (def: 45)
 # the time in seconds for the holy deagle to recharge after a player missed a shot
 ttt_pri_refill_time_missed 6
@@ -266,33 +268,3 @@ ttt_pri_damage_marker 20
 # defines if players in the brotherhood should be notified with messages about players in their team
 ttt_pri_show_messages 1 
   #[0/1] (def: 1)
-# enable or disable this role
-ttt_cup_enabled 1 
-  #[0/1] (default: 1) 
-# the percentage of players that are spawned as this role
-ttt_cup_pct 0.2
-  #[0.0..1.0] (default: 0.15)
-# the limit of players that spawn as this role each round, this overwrites the percentage
-ttt_cup_max 1
-  #[0..n] (default: 1) 
-# the probability each round of this role being spawned at all
-ttt_cup_random 7
-  #[0..100] (default: 15) 
-# the amount of players needed for this role to spawn
-ttt_cup_min_players 6
-  #[0..n] (default: 6)
-# whether or not the lovers split their damage
-ttt_cupid_damage_split_enabled 1
-  #[0/1] (default: 1) 
-# whether or not the old weapon is used
-ttt_cupid_old_weapon  1
-  #[0/1] (default: 0) 
-# whether or not the cupid has to be one of the Lovers
-ttt_cupid_forced_selflove 1
- #[0/1] (default: 0) 
-# whether or not lovers will always be in their own team
-ttt_cupid_lovers_force_own_team 1
-#[0/1] (default: 0) 
-# whether or not cupid will join the loved ones
-ttt_cupid_joins_team_lovers 1
-#[0/1] (default: 0) 
