--- a/server.cfg
+++ b/server.cfg
@@ -19,7 +19,7 @@ ttt_det_credits_starting 4
 ttt_det_credits_traitorkill 2
 ttt_allow_discomb_jump 1
 ttt_jetpack_force 20
-ttt_secondchance_tr= 0
+ttt_secondchance_tr 0
 ttt_secondchance_det 1
 ttt_lightsaber_t_buy 1
 ttt_lightsaber_d_buy 1
@@ -234,7 +234,7 @@ ttt_inf_min_players 5
 ttt2_inf_maxhealth_new_inf 45
  #[0..2] (default: 30)
  
-ttt_nokia_durability 150
+ttt_nokia_durability 80
 ttt_nokia_overflowblock 1
 ttt_nokia_chestonly 0
 ttt_nokia_bulletonly 0
