--- a/server.cfg
+++ b/server.cfg
@@ -48,6 +48,25 @@ ttt_asm_damage_owner 0
 ttt_asm_allow_abort 0
 ttt_asm_friendlyfire 0
 #
+# Jackal
+# enable or disable this role
+  ttt_jack_enabled 1
+  #(default: 1)
+# the percentage of players that are spawned as this role
+  ttt_jack_pct 0.4 
+# the limit of players that spawn as this role each round, this overwrites the percentage
+  ttt_jack_max 1 
+# the probability each round of this role being spawned at all
+  ttt_jack_random 60
+# the amount of players needed for this role to spawn
+  ttt_jack_min_players: 7 
+ # Does the Jackal spawn with a sidekick deagle
+ttt_jackal_spawn_siki_deagle 1 
+# The Armor value that the Jackal starts with
+
+  ttt_jackal_spawn_siki_deagle 1 
+  ttt_jackal_armor_vale 40 
+#
 #   Shinigami [ROLE]
 #
 # enable or disable this role
