Update buildWorkAround.sh, Dockerfile, server.cfg

--- a/server.cfg
+++ b/server.cfg
@@ -1,5 +1,5 @@
 hostname "GhostTerror TTT2"
-sv_password "Link Start"
+#sv_password "Link Start"
 sv_timeout 60
 rcon_password "WhatIsThisUsedFor"
 mp_autoteambalance 1
